--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,17 @@
 <!-- END CHANGEABLE CONTENT. -->
-</div><!-- content -->
+<?php 
 
-<div id="footer">
-	<p>Template design by <a href="http://www.sixshootermedia.com">Six Shooter Media</a>.</p>
-	<p>&copy; 2011</p>
-</div><!-- footer -->
-</div><!-- wrapper --> 
+if ((is_administrator() && (basename($_SERVER['PHP_SELF'])!='logout.php'))OR (isset($loggedin)&&$loggedin)){
+
+	print '<hr><h3>Site Admin</h3><p><a href="add_quote.php">Add Quote</a> <->
+		<a href="view_quotes.php">View All Quotes</a><->
+		<a href="logout.php">Logout</a></p>';
+}
+
+?>
+
+</div><!-- container -->
+<div id="footer">Content &copy; 2016</div>
 </body>
 </html>
-<?php
-ob_end_flush();
-?>
+
