--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title>Raise High the Roof Beam! A J.D. Salinger Fan Club</title>
+	<title>
+	<?php
+	if (defined('TITLE')){
+		print TITLE;
+	} else {
+		print 'Raise High the Roof Beam! A J.D. Salinger Fan Club';
+	}
+	?>
+
+
+	</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="css/1.css" type="text/css" media="screen,projection" />
 </head>
